feat: add `Declarative OAuthFlow` - initial functionality (#14455)